# avx-examples

./: CMakeLists.txt  README.md
examples/: 01-add-aligned.cpp  02-add-no-aligned.cpp  03-dot-product.cpp  04-linear-search.cpp  05-aligned-class.cpp
